# Library

./: README.md  docker-compose.yml  pyproject.toml  setup.cfg
apps/author/: models.py
apps/authors/: admin.py  urls.py  views.py
apps/authors/migrations/: 0001_initial.py
apps/book/: models.py
apps/book/migrations/: 0001_initial.py
apps/books/: admin.py  models.py  views.py
apps/books/migrations/: 0001_initial.py
backend/: manage.py
backend/apps/authors/: apps.py  views.py
backend/apps/authors/migrations/: 0001_initial.py
backend/apps/books/: apps.py  models.py  urls.py
backend/apps/books/migrations/: 0001_initial.py  0002_alter_bookmodel_publish_date.py
backend/config/: settings.py  urls.py
backend/templates/books/: books.html
config/: settings.py  urls.py
templates/: base.html
templates/authors/: authors.html  authors_books.html
templates/books/: books.html
